plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'es.raulsanmartin'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
  developmentOnly
  runtimeClasspath {
    extendsFrom developmentOnly
  }
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
	  implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
	  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
	  testImplementation('org.springframework.boot:spring-boot-starter-test') {
	  	exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	  }
}

bootJar {
    mainClassName = 'es.raulsanmartin.postit.PostitApplication'
}

test {
	useJUnitPlatform()
}
